<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/de_action_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/re_notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DemoTextStyleBigBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/new_message_notice" />

        <CheckBox
            android:id="@+id/new_message_notice_check"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="13dp"
            android:visibility="gone"
            android:button="@drawable/rc_switch_btn" />

    </RelativeLayout>

    <include layout="@layout/de_merge_view" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            style="@style/DemoTextStyleBigBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/new_message_show" />

        <CheckBox
            android:id="@+id/new_message_show_check"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="13dp"
            android:button="@drawable/rc_switch_btn" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView

            style="@style/DemoTextStyleBigBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/new_message_voice" />

        <CheckBox
            android:id="@+id/voice_check"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="13dp"
            android:button="@drawable/de_switch_privacy_btn" />

    </RelativeLayout>

    <include layout="@layout/de_merge_view" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DemoTextStyleBigBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/new_message_vibration" />

        <CheckBox
            android:id="@+id/vibration_check"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="13dp"
            android:button="@drawable/de_switch_privacy_btn" />

    </RelativeLayout>

    <include layout="@layout/de_merge_view" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DemoTextStyleBigBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/new_message_prompt_voice" />

        <TextView
            style="@style/DemoTextStyleMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:text="@string/new_message_follow_system" />

    </RelativeLayout>

    <include layout="@layout/de_merge_view" />


</LinearLayout>