<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="@color/group_list_liner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:background="@color/main_title_backgroud"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/main_conversation_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_conversation_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_conversation"
                    android:textColor="@color/black_textview"

                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/de_num"
                    style="@style/DemoMainNewMassage"
                    android:layout_marginRight="7dp"
                    android:paddingBottom="2dp"
                    android:text="18"
                    android:textColor="@color/main_regist"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_group_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_group_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_group"
                    android:textColor="@color/black_textview"
                    android:textSize="16sp" />

                <TextView
                    style="@style/DemoMainNewMassage"
                    android:layout_marginRight="7dp"
                    android:textColor="@color/main_regist"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_chatroom_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_chatroom_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_chatroom"
                    android:textColor="@color/black_textview"
                    android:textSize="16sp" />

                <TextView
                    style="@style/DemoMainNewMassage"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/main_regist"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_customer_liner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_customer_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_customer"
                    android:textColor="@color/black_textview"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/customer_noread"
                    style="@style/DemoMainNewMassage1"
                    android:layout_marginRight="14dp"
                    android:textColor="@color/main_regist"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/main_switch_img"
            style="@style/DemoMainPublic" />

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>
