<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/group_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <cn.rongcloud.im.server.widget.SelectableRoundedImageView
            android:id="@+id/friend_header"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:sriv_left_bottom_corner_radius="3dip"
            app:sriv_left_top_corner_radius="3dip"
            app:sriv_right_bottom_corner_radius="3dip"
            app:sriv_right_top_corner_radius="3dip"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
             />

        <TextView
            android:id="@+id/friend_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="@color/group_list_black_textview"
            android:textSize="16dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/set_top"
            android:textSize="16dp" />

        <cn.rongcloud.im.ui.widget.switchbutton.SwitchButton
            android:id="@+id/sw_freind_top"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswBackMeasureRatio="1.4"
            app:kswThumbDrawable="@drawable/ios_thumb"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/messsage_notice"
            android:textSize="16dp" />

        <cn.rongcloud.im.ui.widget.switchbutton.SwitchButton
            android:id="@+id/sw_friend_notfaction"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswBackMeasureRatio="1.4"
            app:kswThumbDrawable="@drawable/ios_thumb"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/black_state"
            android:textSize="16dp" />

        <cn.rongcloud.im.ui.widget.switchbutton.SwitchButton
            android:id="@+id/black_state"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/ios_back_drawable"
            app:kswBackMeasureRatio="1.4"
            app:kswThumbDrawable="@drawable/ios_thumb"
            app:kswThumbMarginBottom="-8dp"
            app:kswThumbMarginLeft="-5dp"
            app:kswThumbMarginRight="-5dp"
            app:kswThumbMarginTop="-2.5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clean_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/clean_message"
            android:textSize="16dp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rp_arrow" />
    </LinearLayout>


    <Button
        android:id="@+id/start_friend_chat"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rs_select_btn_green"
        android:text="@string/send_message"
        android:textColor="#FFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/delete_friend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rs_select_btn_red"
        android:text="删除好友"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>